Fixed footer spacing.

--- a/client/styles/colors/grid.styl
+++ b/client/styles/colors/grid.styl
@@ -43,3 +43,9 @@
 
 	.col--menu
 		background-color $color-darkest-inv
+
+	footer
+		background-color $color-lightish
+		border-top 1px solid $color-darkest-inv
+		&:before
+			border-top 1px solid $color-lightest
