--- a/client/styles/utilities.styl
+++ b/client/styles/utilities.styl
@@ -54,6 +54,14 @@
 	padding-left 15px
 	padding-right 15px
 
+.content-end
+	margin-top 20px
+	&:before
+		display table
+		content " "
+	&:after
+		clear both
+
 // Shifting classes
 .shift-down
 	margin-top 6px
@@ -62,6 +70,9 @@
 .shift-down-1px
 	margin-top 1px
 	margin-bottom -1px
+
+.shift-up
+	margin-top -10px
 
 .shift-up-1px
 	margin-top -1px
